# lab1_SPO

./: CMakeLists.txt  Makefile
headers/: commands.h  constants.h  filesystem_utils.h  mode.h  operations_ext.h  output_util.h  partition.h  state.h  structures.h  user_interface.h  utils.h
sources/: commands.c  filesystem_utils.c  main.c  mode.c  operations_ext.c  output_util.c  partition.c  user_interface.c  utils.c
